removed unused variables; altered strings

--- a/donutsThursday.html
+++ b/donutsThursday.html
@@ -2,11 +2,10 @@
 
 var downtown, capitolHill, sLU, wedgewood, ballard;
 
-function Location(shopName, openHr, closeHr, peopleNumLow, peopleNumHigh, percentEnter, avgDonutsOrdered) {
+function Location(shopName, openHours, peopleNumLow, peopleNumHigh, percentEnter, avgDonutsOrdered) {
   this.shopName         = shopName;
-  //shop hours must be entered using a 24-clock (integers only); this program currently cannot create sales estimates for shops that don't open and close "on the hour"
-  this.openHr           = openHr;
-  this.closeHr          = closeHr;
+  //calculates total number of hours shop is open per day
+  this.openHours        = openHours;
   //the smallest number of people who might pass by this shop during any given hour
   this.peopleNumLow     = peopleNumLow;
   //the largest number of people who might pass by this shop during any given hour
@@ -14,10 +13,7 @@ function Location(shopName, openHr, closeHr, peopleNumLow, peopleNumHigh, percen
   this.avgDonutsOrdered = avgDonutsOrdered;
   //the percent of people passing by the shop who enter to purchase donuts
   this.percentEnter     = percentEnter;
-  //calculates total number of hours shop is open per day
-  this.hoursOp = function() {
-    return this.closeHr - this.openHr;
-  };
+
   //possible number of people who might walk past shop in a given hour
   this.numPeopleThisHour = function() {
     return (Math.floor((this.peopleNumHigh - this.peopleNumLow) * Math.random()) + (this.peopleNumLow + 1));
@@ -32,17 +28,17 @@ function Location(shopName, openHr, closeHr, peopleNumLow, peopleNumHigh, percen
   }
 
   this.hourlyReport = function() {
-      console.log(this.shopName + " needs " + (this.hourlyDonutProjection()) + " donuts for the " + i + " hour of the day");
+      console.log("The " + this.shopName + " Top Pot location needs " + (this.hourlyDonutProjection()) + " donuts for hour " + i + " of the day.");
   }
 
 }
 
 //create objects for Top Pot shops in 5 locations
-downtown    = new Location("Downtown",         7, 18, 80,  220, 10, 4  );
-capitolHill = new Location("Capitol Hill",     7, 18, 5,   45,  45, 2  );
-sLU         = new Location("South Lake Union", 7, 18, 180, 250, 5,  6  );
-wedgewood   = new Location("Wedgewood",        7, 18, 20,  60,  20, 1.5);
-ballard     = new Location("Ballard",          7, 18, 25,  175, 35, 1  );
+downtown    = new Location("Downtown",         11, 80,  220, 10, 4  );
+capitolHill = new Location("Capitol Hill",     11, 5,   45,  45, 2  );
+sLU         = new Location("South Lake Union", 11, 180, 250, 5,  6  );
+wedgewood   = new Location("Wedgewood",        11, 20,  60,  20, 1.5);
+ballard     = new Location("Ballard",          11, 25,  175, 35, 1  );
 
 var shopArray = [downtown, capitolHill, sLU, wedgewood, ballard];
 var dailyTotal = 0;
@@ -50,12 +46,12 @@ var dailyTotal = 0;
 
 for(j=0; j < shopArray.length; j++) {
   
-  for (i=0; i < 11; i++) {
+  for (i=0; i < shopArray[j].openHours; i++) {
     shopArray[j].hourlyReport();
     dailyTotal += shopArray[j].hourlyDonutProjection();
   }
 
-  console.log("Daily totals for the " + shopArray[j].shopName + " location are: " +dailyTotal);
+  console.log("Daily projected totals for the " + shopArray[j].shopName + " location: " +dailyTotal + " donuts");
 
 } 
 
