--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <!--<link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">-->
     </head>
     <body>
+      <script src="donutsThursday.js"></script>
+
       <h1>How Many Donuts Does Your Store Need?</h1>
       <section id="userInput">
         <div id="shopName">
-          <p>Shop Name: <input type="text" name="shopNameInput"> </p>
+          <p>Shop Name: <input type="text" id="shopNameInput"> </p>
         </div>
         <div id="hoursOperating">
           <p>Number of Hours Open per Day: <input type="text" name="hoursOperatingInput"> </p>
@@ -36,8 +38,8 @@
           <p>Average Number of Donuts Ordered per Customer: <input  type="text" name="avgDonutsOrderedInput"></p>
         </div>
       </section>
-      <section id="submitButtom">
-        <button type="button">Submit</button>
+      <section id="submitButton">
+        <button type="button" id="submitButtonClick">Submit</button>
       </section>
       <section id="output">
       </section>
