add a lot of good stuff

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <link rel="stylesheet" href="css/main.css">-->
     </head>
     <body>
-      <script src="donutsThursday.js">Donut Projections</script>
+      <script src="cleanDonutsFriday.js">Donut Projections</script>
 
       <h1>How Many Donuts Does Your Store Need?</h1>
       <section id="userInput">
-        <div id="shopName">
+        <div id="shopLocationName">
           <p>Shop Name: <input type="text" id="shopNameInput"> </p>
         </div>
         <div id="hoursOperating">
@@ -39,9 +39,10 @@
         </div>
       </section>
       <section id="submitButton">
-        <button type="button" id="submitButtonClick" onClick="showAlert();">Submit</button>
+        <button type="button" id="submitButtonClick" onClick="buttonClick();">Submit</button>
       </section>
       <div id="output">
+        <!--<p></p>-->
       </div>
     </body>
 </html>
