add ability to loop appropriate # of times

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <button type="button" id="submitButtonClick" onClick="buttonClick();">Submit</button>
       </section>
       <div id="output">
-        <!--<p></p>-->
+        <ul id="outputList">
+        </ul>
       </div>
     </body>
 </html>
