add user instructions in html doc

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
       <script src="cleanDonutsFriday.js">Donut Projections</script>
 
       <h1>How Many Donuts Does Your Store Need?</h1>
+      <section id="userInstructions">
+        <p>In order to calculate the number of donuts your store needs, per hour, with a daily total, enter in the following information: </p>
+        <ol>
+          <li>Select a shop location or enter in a new one.</li>
+          <li>Enter the number of hours your shop is open.</li>
+          <li>Enter the low number (or minimum) on the range of people who walk by hourly.</li>
+          <li>Enter the high number (or maximum) on the range of people who walk by hourly.</li>
+          <li>Enter the percent of those who walk by who actually enter.</li>
+          <li>Finally, enter the average number of donuts a customer orders and click "submit"!</li>
+        </ol>
+      </section>
       <section id="userInput">
         <div id="shopLocationName">
           <p>Shop Name: <input type="text" id="shopNameInput"> </p>
