edit user instructions for no dropdown menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section id="userInstructions">
         <p>In order to calculate the number of donuts your store needs, per hour, with a daily total, enter in the following information: </p>
         <ol>
-          <li>Select a shop location or enter in a new one.</li>
+          <li>Enter in your shop location. </li>
           <li>Enter the number of hours your shop is open.</li>
           <li>Enter the low number (or minimum) on the range of people who walk by hourly.</li>
           <li>Enter the high number (or maximum) on the range of people who walk by hourly.</li>
