move script tag to bottom of html page, re-type quotions to make page functional

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="css/main.css">-->
     </head>
     <body>
-      <script src="cleanDonutsFriday.js">Donut Projections</script>
 
       <h1>How Many Donuts Does Your Store Need?</h1>
       <section id="userInstructions">
@@ -50,11 +49,13 @@
         </div>
       </section>
       <section id="submitButton">
-        <button type="button" id="submitButtonClick" onClick="buttonClick();">Submit</button>
+        <button type="button" id="submitButtonClick">Submit</button>
       </section>
       <div id="output">
         <ul id="outputList">
         </ul>
       </div>
+      
+      <script src="cleanDonutsFriday.js">Donut Projections</script>
     </body>
 </html>
